--- a/environment.yml
+++ b/environment.yml
@@ -46,10 +46,10 @@ dependencies:
   - brotli-bin=1.0.9=h2bbff1b_7
   - brotlipy=0.7.0=py39h2bbff1b_1003
   - bzip2=1.0.8=he774522_0
-  - ca-certificates=2022.10.11=haa95532_0
+  - ca-certificates=2022.12.7=h5b45459_0
   - cachetools=4.2.2=pyhd3eb1b0_0
   - certifi=2022.9.24=py39haa95532_0
-  - cffi=1.15.1=py39h2bbff1b_2
+  - cffi=1.15.1=py39h2bbff1b_3
   - cfitsio=3.470=h2bbff1b_7
   - chardet=4.0.0=py39haa95532_1003
   - charls=2.2.0=h6c2663c_0
@@ -60,13 +60,14 @@ dependencies:
   - colorama=0.4.5=py39haa95532_0
   - colorcet=3.0.1=py39haa95532_0
   - comtypes=1.1.10=py39haa95532_1002
-  - conda=22.11.1=py39haa95532_1
+  - conda=22.11.1=py39haa95532_3
   - conda-content-trust=0.1.3=py39haa95532_0
   - conda-pack=0.6.0=pyhd3eb1b0_0
   - conda-package-handling=1.9.0=py39h8cc25b3_1
   - conda-token=0.4.0=pyhd3eb1b0_0
   - console_shortcut=0.1.1=4
   - constantly=15.1.0=pyh2b92418_0
+  - contourpy=1.0.5=py39h59b6b97_0
   - cookiecutter=1.7.3=pyhd3eb1b0_0
   - cryptography=38.0.1=py39h21b164f_0
   - cssselect=1.1.0=pyhd3eb1b0_0
@@ -74,10 +75,10 @@ dependencies:
   - cycler=0.11.0=pyhd3eb1b0_0
   - cython=0.29.32=py39hd77b12b_0
   - cytoolz=0.12.0=py39h2bbff1b_0
-  - daal4py=2021.5.0=py39h8cb3d55_0
-  - dal=2021.5.0=haa95532_796
-  - dask=2022.5.0=py39haa95532_0
-  - dask-core=2022.5.0=py39haa95532_0
+  - daal4py=2021.6.0=py39h757b272_1
+  - dal=2021.6.0=h59b6b97_874
+  - dask=2022.7.0=py39haa95532_0
+  - dask-core=2022.7.0=py39haa95532_0
   - dataclasses=0.8=pyh6d0b6a4_7
   - datashader=0.14.2=py39haa95532_0
   - datashape=0.5.4=py39haa95532_1
@@ -85,8 +86,8 @@ dependencies:
   - decorator=5.1.1=pyhd3eb1b0_0
   - defusedxml=0.7.1=pyhd3eb1b0_0
   - diff-match-patch=20200713=pyhd3eb1b0_0
-  - dill=0.3.4=pyhd3eb1b0_0
-  - distributed=2022.5.0=py39haa95532_0
+  - dill=0.3.6=py39haa95532_0
+  - distributed=2022.7.0=py39haa95532_0
   - docutils=0.18.1=py39haa95532_3
   - entrypoints=0.4=py39haa95532_0
   - et_xmlfile=1.1.0=py39haa95532_0
@@ -94,22 +95,24 @@ dependencies:
   - filelock=3.6.0=pyhd3eb1b0_0
   - flake8=4.0.1=pyhd3eb1b0_1
   - flask=2.1.3=py39haa95532_0
+  - flatbuffers=2.0.0=h6c2663c_0
+  - flit-core=3.6.0=pyhd3eb1b0_0
   - fonttools=4.25.0=pyhd3eb1b0_0
   - freetype=2.12.1=ha860e81_0
   - frozenlist=1.3.3=py39h2bbff1b_0
-  - fsspec=2022.10.0=py39haa95532_0
-  - gensim=4.2.0=py39h2e25243_0
+  - fsspec=2022.11.0=py39haa95532_0
+  - gensim=4.1.2=py39hd77b12b_0
   - giflib=5.2.1=h62dcd97_0
   - google-auth=2.6.0=pyhd3eb1b0_0
   - google-auth-oauthlib=0.4.4=pyhd3eb1b0_0
   - google-pasta=0.2.0=pyhd3eb1b0_0
-  - greenlet=1.1.1=py39hd77b12b_0
+  - greenlet=2.0.1=py39hd77b12b_0
   - grpcio=1.42.0=py39hc60d5dd_0
   - h5py=3.7.0=py39h3de5c98_0
   - hdf5=1.10.6=h1756f20_1
   - heapdict=1.0.1=pyhd3eb1b0_0
   - holoviews=1.15.2=py39haa95532_0
-  - hvplot=0.8.1=py39haa95532_0
+  - hvplot=0.8.2=py39haa95532_0
   - hyperlink=21.0.0=pyhd3eb1b0_0
   - icc_rt=2022.1.0=h6049295_2
   - icu=58.2=ha925a31_3
@@ -145,7 +148,7 @@ dependencies:
   - json5=0.9.6=pyhd3eb1b0_0
   - jsonschema=4.16.0=py39haa95532_0
   - jupyter=1.0.0=py39haa95532_8
-  - jupyter_client=7.4.7=py39haa95532_0
+  - jupyter_client=7.3.4=pyhd8ed1ab_0
   - jupyter_console=6.4.3=pyhd3eb1b0_0
   - jupyter_core=4.11.2=py39haa95532_0
   - jupyter_server=1.18.1=py39haa95532_0
@@ -153,7 +156,6 @@ dependencies:
   - jupyterlab_pygments=0.1.2=py_0
   - jupyterlab_server=2.16.3=py39haa95532_0
   - jupyterlab_widgets=1.0.0=pyhd3eb1b0_1
-  - keras=2.9.0=py39haa95532_0
   - keras-preprocessing=1.1.2=pyhd3eb1b0_0
   - keyring=23.4.0=py39haa95532_0
   - kiwisolver=1.4.2=py39hd77b12b_0
@@ -187,8 +189,8 @@ dependencies:
   - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
   - markdown=3.3.4=py39haa95532_0
   - markupsafe=2.1.1=py39h2bbff1b_0
-  - matplotlib=3.5.3=py39haa95532_0
-  - matplotlib-base=3.5.3=py39hd77b12b_0
+  - matplotlib=3.6.2=py39haa95532_0
+  - matplotlib-base=3.6.2=py39h1094b8e_0
   - matplotlib-inline=0.1.6=py39haa95532_0
   - mccabe=0.6.1=py39haa95532_2
   - menuinst=1.4.19=py39h59b6b97_0
@@ -208,14 +210,14 @@ dependencies:
   - nbclassic=0.4.8=py39haa95532_0
   - nbclient=0.5.13=py39haa95532_0
   - nbconvert=6.5.4=py39haa95532_0
-  - nbformat=5.5.0=py39haa95532_0
+  - nbformat=5.7.0=py39haa95532_0
   - nest-asyncio=1.5.5=py39haa95532_0
   - networkx=2.8.4=py39haa95532_0
   - nltk=3.7=pyhd3eb1b0_0
   - nose=1.3.7=pyhd3eb1b0_1008
   - notebook=6.5.2=py39haa95532_0
   - notebook-shim=0.2.2=py39haa95532_0
-  - numba=0.56.3=py39hf11a4ad_0
+  - numba=0.56.4=py39hf11a4ad_0
   - numexpr=2.8.4=py39h5b0cc5e_0
   - numpy=1.21.5=py39h7a0a035_3
   - numpy-base=1.21.5=py39hca35cd5_3
@@ -227,7 +229,7 @@ dependencies:
   - openssl=1.1.1s=h2bbff1b_0
   - opt_einsum=3.3.0=pyhd3eb1b0_1
   - packaging=21.3=pyhd3eb1b0_0
-  - pandas=1.5.1=py39hf11a4ad_0
+  - pandas=1.5.2=py39hf11a4ad_0
   - pandocfilters=1.5.0=pyhd3eb1b0_0
   - panel=0.14.1=py39haa95532_0
   - param=1.12.2=py39haa95532_0
@@ -241,7 +243,6 @@ dependencies:
   - pexpect=4.8.0=pyhd3eb1b0_3
   - pickleshare=0.7.5=pyhd3eb1b0_1003
   - pillow=9.2.0=py39hdc2b20a_1
-  - pip=22.2.2=py39haa95532_0
   - platformdirs=2.5.2=py39haa95532_0
   - plotly=5.9.0=py39haa95532_0
   - pluggy=1.0.0=py39haa95532_1
@@ -282,7 +283,7 @@ dependencies:
   - python=3.9.15=h6244533_2
   - python-dateutil=2.8.2=pyhd3eb1b0_0
   - python-fastjsonschema=2.16.2=py39haa95532_0
-  - python-flatbuffers=2.0=pyhd3eb1b0_0
+  - python-flatbuffers=22.12.6=pyhd8ed1ab_0
   - python-lsp-black=1.0.0=pyhd3eb1b0_0
   - python-lsp-jsonrpc=1.0.0=pyhd3eb1b0_0
   - python-lsp-server=1.3.3=pyhd3eb1b0_0
@@ -291,8 +292,8 @@ dependencies:
   - python_abi=3.9=2_cp39
   - pytz=2022.1=py39haa95532_0
   - pyviz_comms=2.0.2=pyhd3eb1b0_0
-  - pywavelets=1.3.0=py39h2bbff1b_0
-  - pywin32=302=py39h2bbff1b_2
+  - pywavelets=1.4.1=py39h2bbff1b_0
+  - pywin32=305=py39h2bbff1b_0
   - pywin32-ctypes=0.2.0=py39haa95532_1000
   - pywinpty=2.0.2=py39h5da7b33_0
   - pyyaml=6.0=py39h2bbff1b_1
@@ -311,19 +312,17 @@ dependencies:
   - rope=0.22.0=pyhd3eb1b0_0
   - rsa=4.7.2=pyhd3eb1b0_1
   - rtree=0.9.7=py39h2eaa2aa_1
-  - ruamel.yaml=0.16.12=py39h2bbff1b_3
+  - ruamel.yaml=0.17.21=py39h2bbff1b_0
   - ruamel.yaml.clib=0.2.6=py39h2bbff1b_1
-  - ruamel_yaml=0.15.100=py39h2bbff1b_0
+  - ruamel_yaml=0.17.21=py39h2bbff1b_0
   - s3transfer=0.6.0=py39haa95532_0
   - scikit-image=0.19.3=py39hd77b12b_1
-  - scikit-learn=1.1.3=py39hd77b12b_0
-  - scikit-learn-intelex=2021.5.0=py39haa95532_0
+  - scikit-learn-intelex=2021.6.0=py39haa95532_0
   - scipy=1.7.3=py39h7a0a035_2
   - scrapy=2.6.2=py39haa95532_0
   - seaborn=0.12.1=py39haa95532_0
   - send2trash=1.8.0=pyhd3eb1b0_1
   - service_identity=18.1.0=pyhd3eb1b0_1
-  - setuptools=65.5.0=py39haa95532_0
   - sip=4.19.13=py39hd77b12b_0
   - six=1.16.0=pyhd3eb1b0_1
   - smart_open=5.2.1=py39haa95532_0
@@ -351,6 +350,7 @@ dependencies:
   - tbb4py=2021.6.0=py39h59b6b97_0
   - tblib=1.7.0=pyhd3eb1b0_0
   - tenacity=8.0.1=py39haa95532_1
+  - tensorboard=2.9.0=py39haa95532_0
   - tensorboard-data-server=0.6.0=py39haa95532_0
   - tensorboard-plugin-wit=1.8.1=py39haa95532_0
   - tensorflow=2.9.1=mkl_py39hc9ebea8_1
@@ -371,17 +371,16 @@ dependencies:
   - tomli=2.0.1=py39haa95532_0
   - tomlkit=0.11.1=py39haa95532_0
   - toolz=0.12.0=py39haa95532_0
-  - tornado=6.2=py39h2bbff1b_0
   - tqdm=4.64.1=py39haa95532_0
   - traitlets=5.1.1=pyhd3eb1b0_0
   - twisted=22.2.0=py39h2bbff1b_1
   - twisted-iocpsupport=1.0.2=py39h2bbff1b_0
-  - typing-extensions=4.3.0=py39haa95532_0
-  - typing_extensions=4.3.0=py39haa95532_0
-  - tzdata=2022f=h04d1e81_0
+  - typing-extensions=4.4.0=py39haa95532_0
+  - typing_extensions=4.4.0=py39haa95532_0
+  - tzdata=2022g=h04d1e81_0
   - ujson=5.4.0=py39hd77b12b_0
   - unidecode=1.2.0=pyhd3eb1b0_0
-  - urllib3=1.26.12=py39haa95532_0
+  - urllib3=1.26.13=py39haa95532_0
   - vc=14.2=h21ff451_1
   - vs2015_runtime=14.27.29016=h5e58377_2
   - w3lib=1.21.0=pyhd3eb1b0_0
@@ -401,7 +400,7 @@ dependencies:
   - xlrd=2.0.1=pyhd3eb1b0_0
   - xlsxwriter=3.0.3=pyhd3eb1b0_0
   - xlwings=0.27.15=py39haa95532_0
-  - xz=5.2.6=h8cc25b3_0
+  - xz=5.2.8=h8cc25b3_0
   - yaml=0.2.5=he774522_0
   - yapf=0.31.0=pyhd3eb1b0_0
   - yarl=1.8.1=py39h2bbff1b_0
@@ -415,15 +414,18 @@ dependencies:
   - zstd=1.5.2=h19a0ad4_0
   - pip:
       - csrgraph==0.1.28
-      - flatbuffers==22.12.6
       - gast==0.4.0
+      - jupyter-client==7.4.8
+      - keras==2.11.0
       - libclang==14.0.6
-      - nodevectors==0.1.23
+      - pip==22.3.1
       - protobuf==3.19.6
       - scikeras==0.9.0
-      - tensorboard==2.11.0
+      - scikit-learn==1.2.0
+      - setuptools==65.6.3
+      - sklearn==0.0.post1
       - tensorflow-estimator==2.11.0
-      - tensorflow-intel==2.11.0
       - tensorflow-io-gcs-filesystem==0.28.0
+      - tornado==6.2
       - utils==1.0.1
-prefix: C:\Users\pvamvakas\Anaconda3\envs\midi2vec
+prefix: D:\anaconda3\envs\midi2vec
